tests/unit/default/syntax-error/051-create-table-parens-name-colon-type-params-default.e.t
---- IN ----
+%table(id:decimal(10,2)=42
---- OUT ----
---- ERR ----
syntax: expected `)` after `...l(10,2)=42` instead of EOL at position 27 - at line 1
---- EXIT ----
1
